p2ws_package/Devpp2ws-Package/objects/TempPassenger__c.object
<CustomObject>
    <fields>
        <fullName>ROP_Business_Area_Code_2__c</fullName>
        <description>not in used</description>
        <label>ROP Business Area Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Area_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Business Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Country_Code_2__c</fullName>
        <description>not in used</description>
        <label>ROP Business Country Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Country_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Business Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Extension_2__c</fullName>
        <description>not in used</description>
        <label>ROP Business Extension 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Extension__c</fullName>
        <description>not in used</description>
        <label>ROP Business Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_2_Area_Code__c</fullName>
        <description>ROP business phone area code 2</description>
        <label>ROP Business Phone 2 Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_2_Country_Code__c</fullName>
        <description>ROP business phone country code 2</description>
        <label>ROP Business Phone 2 Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_2_Extension__c</fullName>
        <description>ROP business phone extension 2</description>
        <label>ROP Business Phone 2 Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_2__c</fullName>
        <description>ROP business phone number 2</description>
        <label>ROP Business Phone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_Area_Code__c</fullName>
        <description>ROP business phone area code</description>
        <label>ROP Business Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_Country_Code__c</fullName>
        <description>ROP business phone country code</description>
        <label>ROP Business Phone Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_Extension__c</fullName>
        <description>ROP business phone extension</description>
        <label>ROP Business Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone__c</fullName>
        <description>ROP business phone number</description>
        <label>ROP Business Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Date_of_Birth__c</fullName>
        <description>ROP date of birth</description>
        <label>ROP Date of Birth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Email__c</fullName>
        <description>ROP Email</description>
        <label>ROP Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Area_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Fax Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Country_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Fax Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Extension__c</fullName>
        <description>not in used</description>
        <label>ROP Fax Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Phone_Area_Code__c</fullName>
        <description>ROP fax area code</description>
        <label>ROP Fax Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Phone_Country_Code__c</fullName>
        <description>ROP fax country code</description>
        <label>ROP Fax Phone Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Phone_Extension__c</fullName>
        <description>ROP fax extension</description>
        <label>ROP Fax Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Phone__c</fullName>
        <description>ROP fax number</description>
        <label>ROP Fax Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_First_Name__c</fullName>
        <description>ROP firstname</description>
        <label>ROP First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Food_Preference__c</fullName>
        <description>ROP food preference (ex. SPML)</description>
        <label>ROP Food Preference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Gender__c</fullName>
        <description>ROP Gender</description>
        <label>ROP Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Area_Code_2__c</fullName>
        <description>not in used</description>
        <label>ROP Home Area Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Area_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Home Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Country_Code_2__c</fullName>
        <description>not in used</description>
        <label>ROP Home Country Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Country_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Home Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Extension_2__c</fullName>
        <description>not in used</description>
        <label>ROP Home Extension 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Extension__c</fullName>
        <description>not in used</description>
        <label>ROP Home Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_2_Area_Code__c</fullName>
        <description>ROP home phone area code 2</description>
        <label>ROP Home Phone 2 Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_2_Country_Code__c</fullName>
        <description>ROP home phone country code 2</description>
        <label>ROP Home Phone 2 Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_2_Extension__c</fullName>
        <description>ROP home phone extension 2</description>
        <label>ROP Home Phone 2 Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_2__c</fullName>
        <description>ROP home phone number 2</description>
        <label>ROP Home Phone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_Area_Code__c</fullName>
        <description>ROP home phone area code</description>
        <label>ROP Home Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_Country_Code__c</fullName>
        <description>ROP home phone country code</description>
        <label>ROP Home Phone Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_Extension__c</fullName>
        <description>ROP home phone extension</description>
        <label>ROP Home Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone__c</fullName>
        <description>ROP home phone number</description>
        <label>ROP Home Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Language__c</fullName>
        <description>ROP language preference</description>
        <label>ROP Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Last_Name__c</fullName>
        <description>ROP lastname</description>
        <label>ROP Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mailing_Address__c</fullName>
        <description>ROP mailing address</description>
        <label>ROP Mailing Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_2__c</fullName>
        <description>not in used</description>
        <label>ROP Mobile 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Area_Code_2__c</fullName>
        <description>not in used</description>
        <label>ROP Mobile Area Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Area_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Mobile Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Country_Code_2__c</fullName>
        <description>not in used</description>
        <label>ROP Mobile Country Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Country_Code__c</fullName>
        <description>not in used</description>
        <label>ROP Mobile Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Extension_2__c</fullName>
        <description>not in used</description>
        <label>ROP Mobile Extension 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Extension__c</fullName>
        <description>not in used</description>
        <label>ROP Mobile Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone_2_Area_Code__c</fullName>
        <description>ROP mobile phone area code 2</description>
        <label>ROP Mobile Phone 2 Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone_2_Country_Code__c</fullName>
        <description>ROP mobile phone country code 2</description>
        <label>ROP Mobile Phone 2 Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone_2_Extension__c</fullName>
        <description>ROP mobile phone extension 2</description>
        <label>ROP Mobile Phone 2 Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone_2__c</fullName>
        <description>ROP mobile phone number 2</description>
        <label>ROP Mobile Phone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone_Area_Code__c</fullName>
        <description>ROP mobile phone area code</description>
        <label>ROP Mobile Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone_Country_Code__c</fullName>
        <description>ROP mobile phone country code</description>
        <label>ROP Mobile Phone Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone_Extension__c</fullName>
        <description>ROP mobile phone extension</description>
        <label>ROP Mobile Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Phone__c</fullName>
        <description>ROP mobile phone number</description>
        <label>ROP Mobile Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Number__c</fullName>
        <description>ROP membership number</description>
        <label>ROP Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Seat_Preference__c</fullName>
        <description>ROP seat prefer type (ex.NSSW = near window)</description>
        <label>ROP Seat Preference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Status__c</fullName>
        <description>ROP status (ex. AC = active)</description>
        <label>ROP Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Tier__c</fullName>
        <description>ROP Tier</description>
        <label>ROP Tier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Title__c</fullName>
        <description>ROP title / salutation</description>
        <label>ROP Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>boardPoint__c</fullName>
        <description>not in used</description>
        <label>Board Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bookingClass__c</fullName>
        <description>not in used</description>
        <label>Booking Class</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bookingSeat__c</fullName>
        <description>not in used</description>
        <label>Booking Seat</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cabinCode__c</fullName>
        <description>not in used</description>
        <label>Cabin Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>checkinSeat__c</fullName>
        <description>not in used</description>
        <label>Checkin Seat</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateOfBirth__c</fullName>
        <description>not in used</description>
        <label>Date of birth</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docDateExpiry__c</fullName>
        <description>not in used</description>
        <label>Travel Doc Date Expiry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docIssuingCountry__c</fullName>
        <description>not in used</description>
        <label>Doc Issuing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docNumber__c</fullName>
        <description>not in used</description>
        <label>Travel document number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docType__c</fullName>
        <description>not in used</description>
        <label>Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>not in used</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enrollDate__c</fullName>
        <description>not in used</description>
        <label>Enroll Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enrollSource__c</fullName>
        <description>not in used</description>
        <label>Enroll Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorMessage__c</fullName>
        <description>not in used</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <description>not in used</description>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flightDate__c</fullName>
        <description>not in used</description>
        <label>Flight Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flightNumber__c</fullName>
        <description>not in used</description>
        <label>Flight Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fqtCarrier__c</fullName>
        <description>not in used</description>
        <label>fqtCarrier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fqtNumber__c</fullName>
        <description>not in used</description>
        <label>fqtNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fqtTierLevel__c</fullName>
        <description>not in used</description>
        <label>fqtTierLevel</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <description>not in used</description>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groupName__c</fullName>
        <description>not in used</description>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasSSR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Has SSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>homePhoneType__c</fullName>
        <description>not in used</description>
        <label>Home phone type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAssignedSeat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is Assigned Seat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isChild__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInbound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInfant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is Infant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isOutbound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is Outbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRetry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStaffBooking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is StaffBooking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStaffWaitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is StaffWaitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTicket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>not in used</description>
        <label>Is Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>language__c</fullName>
        <description>not in used</description>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <description>not in used</description>
        <label>Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>middleName__c</fullName>
        <description>not in used</description>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <description>not in used</description>
        <label>Mobile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nationality__c</fullName>
        <description>not in used</description>
        <label>nationality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offPoint__c</fullName>
        <description>not in used</description>
        <label>Off Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordLocator__c</fullName>
        <description>not in used</description>
        <label>Record Locator</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>religion__c</fullName>
        <description>not in used</description>
        <label>Religion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remainingMiles__c</fullName>
        <description>not in used</description>
        <label>Remaining Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ropAdrCityName__c</fullName>
        <description>not in used</description>
        <label>ROP Address City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrCompanyName1__c</fullName>
        <description>not in used</description>
        <label>ROP Address Company Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrCompanyName2__c</fullName>
        <description>not in used</description>
        <label>ROP Address Company Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrCountryCode__c</fullName>
        <description>not in used</description>
        <label>ROP Address Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrLine1__c</fullName>
        <description>not in used</description>
        <label>ROP Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrLine2__c</fullName>
        <description>not in used</description>
        <label>ROP Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrLine3__c</fullName>
        <description>not in used</description>
        <label>ROP Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrPostal__c</fullName>
        <description>not in used</description>
        <label>ROP Address Postal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrSeqNo__c</fullName>
        <description>not in used</description>
        <label>ROP address seq no</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropAdrType__c</fullName>
        <description>not in used</description>
        <label>ROP address type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropChildren__c</fullName>
        <description>not in used</description>
        <label>ROP Children</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropCurrentMileage__c</fullName>
        <description>not in used</description>
        <label>ROP Current Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ropEducation__c</fullName>
        <description>not in used</description>
        <label>ROP Education</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropEmlSeqNo__c</fullName>
        <description>not in used</description>
        <label>ROP Eml Seq No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropHomePhoneAreaCode__c</fullName>
        <description>not in used</description>
        <label>ROP Home Phone Area Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropHomePhoneCountryCode__c</fullName>
        <description>not in used</description>
        <label>ROP Home Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropHomePhoneExtension__c</fullName>
        <description>not in used</description>
        <label>ROP Home Phone Extension</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropHomePhoneNumber__c</fullName>
        <description>not in used</description>
        <label>ROP Home Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropHomePhoneSeqNo__c</fullName>
        <description>not in used</description>
        <label>ROP Home Phone Seq No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropHomePhoneType__c</fullName>
        <description>not in used</description>
        <label>ROP Home Phone Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropIdentificationNumber__c</fullName>
        <description>not in used</description>
        <label>ROP Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropIncome__c</fullName>
        <description>not in used</description>
        <label>ROP Income</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropMaritalStatus__c</fullName>
        <description>not in used</description>
        <label>ROP Marital Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropMileExpAmountQ1__c</fullName>
        <description>not in used</description>
        <label>ROP mile expiry amount quater 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ropMileExpAmountQ2__c</fullName>
        <description>not in used</description>
        <label>ROP mile expiry amount quater 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ropMileExpDateQ1__c</fullName>
        <description>not in used</description>
        <label>ROP mile expiry date quater 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropMileExpDateQ2__c</fullName>
        <description>not in used</description>
        <label>ROP mile expiry date Q2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropMileExpYearQ1__c</fullName>
        <description>not in used</description>
        <label>ROP mile expiry year quater 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ropMileExpYearQ2__c</fullName>
        <description>not in used</description>
        <label>ROP mile expiry year quater 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ropOccupation__c</fullName>
        <description>not in used</description>
        <label>ROP Occupation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropPassportNumber__c</fullName>
        <description>not in used</description>
        <label>ROP Passport Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropSPCCode__c</fullName>
        <description>not in used</description>
        <label>ROP SPC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ropStatus__c</fullName>
        <description>not in used</description>
        <label>ROP Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation__c</fullName>
        <description>not in used</description>
        <label>Salutation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segmentStatus__c</fullName>
        <description>not in used</description>
        <label>Segment Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spml__c</fullName>
        <description>not in used</description>
        <label>SPML</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suffix__c</fullName>
        <description>not in used</description>
        <label>Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wsKey__c</fullName>
        <description>not in used</description>
        <label>wsKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TempPassenger</label>
    <nameField>
        <label>TempPassenger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TempPassengers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>